--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.0-rc.1",
-    "@angular/common": "20.0.0-rc.1",
-    "@angular/compiler": "20.0.0-rc.1",
-    "@angular/core": "20.0.0-rc.1",
-    "@angular/forms": "20.0.0-rc.1",
-    "@angular/platform-browser": "20.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "20.0.0-rc.1",
-    "@angular/router": "20.0.0-rc.1",
+    "@angular/animations": "^20.0.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/router": "^20.0.0",
     "@luigi-project/client": "^2.21.3",
     "@luigi-project/testing-utilities": "^2.21.3",
     "rxjs": "~6.6.0",
@@ -28,9 +28,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.0.0-rc.1",
-    "@angular/cli": "20.0.0-rc.1",
-    "@angular/compiler-cli": "20.0.0-rc.1",
+    "@angular-devkit/build-angular": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "engine.io": "~6.6.4",
@@ -43,7 +43,7 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "ng-packagr": "20.0.0-next.8",
+    "ng-packagr": "20.0.0",
     "socket.io-adapter": "~2.5.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
