--- a/.github/workflows/setupScripts.yml
+++ b/.github/workflows/setupScripts.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.14.0'
+          node-version: '20.19.x'
       - run: |
           OUT=$(bash ./test/setuptests.sh @angular/cli 4200 http://localhost:4200/ https://raw.githubusercontent.com/SAP/luigi/main/scripts/setup/angular.sh | tee /dev/fd/2)
           RES=$(grep -c "Stopping webserver on port 4200" <<< "$OUT")
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.14.0'
+          node-version: '20.19.x'
       - run: |
           OUT=$(bash ./test/setuptests.sh @vue/cli 4173 http://localhost:4173/ https://raw.githubusercontent.com/SAP/luigi/main/scripts/setup/vue.sh | tee /dev/fd/2)
           RES=$(grep -c "Stopping webserver on port 4173" <<< "$OUT")
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.14.0'
+          node-version: '20.19.x'
       - run: |
           OUT=$(bash ./test/setuptests.sh 'react-cli react' 3000 http://localhost:3000/ https://raw.githubusercontent.com/SAP/luigi/main/scripts/setup/react.sh | tee /dev/fd/2)
           RES=$(grep -c "Stopping webserver on port 3000" <<< "$OUT")
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.14.0'
+          node-version: '20.19.x'
       - run: |
           OUT=$(bash ./test/setuptests.sh @ui5/cli 8080 http://localhost:8080/index.html#/home https://raw.githubusercontent.com/SAP/luigi/main/scripts/setup/openui5.sh | tee /dev/fd/2)
           RES=$(grep -c "Stopping webserver on port 8080" <<< "$OUT")
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.14.0'
+          node-version: '20.19.x'
       - run: |
           OUT=$(bash ./test/setuptests.sh ' ' 3000 http://localhost:3000/ https://raw.githubusercontent.com/SAP/luigi/main/scripts/setup/no-framework.sh | tee /dev/fd/2)
           RES=$(grep -c "Stopping webserver on port 3000" <<< "$OUT")
