--- a/client-frameworks-support/client-support-angular/projects/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/projects/client-support-angular/package.json
@@ -7,8 +7,8 @@
     "url": "ssh://github.com/SAP/luigi.git"
   },
   "peerDependencies": {
-    "@angular/common": "^20.0.0",
-    "@angular/core": "^20.0.0",
+    "@angular/common": "20.0.0",
+    "@angular/core": "20.0.0",
     "@luigi-project/testing-utilities": "^2.0.0",
     "@luigi-project/client": "^2.0.0"
   },
