--- a/core/package.json
+++ b/core/package.json
@@ -10,7 +10,7 @@
     "chai": "^4.3.6",
     "css-tree": "^2.3.1",
     "esbuild": "^0.25.1",
-    "fs-extra":"^11.3.0",
+    "fs-extra": "^11.3.0",
     "fundamental-styles": "0.40.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -41,5 +41,8 @@
   },
   "engines": {
     "node": ">=18.19.1"
+  },
+  "dependencies": {
+    "terser": "^5.42.0"
   }
 }
