--- a/core/package.json
+++ b/core/package.json
@@ -24,6 +24,7 @@
     "sinon": "^14.0.0",
     "svelte": "^4.2.19",
     "svelte-preprocess": "^5.1.4",
+    "terser": "^5.42.0",
     "typescript": "^5.0.0",
     "vite": "^5.4.19"
   },
